desktop view changed

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                             <!-- section subtitle start -->
                                             <div class="section-title section-title-home fadeIn-element">
                                                 <h2 class="section-title-line section-title-line-home">
-                                                    <span>Special &nbsp;Occasion</span>
+                                                    <!-- <span>Special &nbsp;Occasion</span> -->
                                                 </h2>
                                             </div>
                                             <!-- section subtitle end -->
@@ -154,7 +154,8 @@
                                                 <a data-lity="" href="mothersday.mp4">
                                                     <div class="more-button-bg-center more-button-circle visible-xs" style="
                                                     margin-top: 360px" ></div>
-                                                    <div class="more-button-bg-center more-button-circle hidden-xs" ></div>
+                                                    <div class="more-button-bg-center more-button-circle hidden-xs" style="
+                                                    margin-top: -130px"></div>
                                                     <div class="more-button-txt-center">
                                                         <span>Watch Video</span>
                                                     </div>
@@ -1327,341 +1328,6 @@
         <!-- divider end -->
     </div>
     <!-- services end -->
-
-    <!-- blog start -->
-    <div id="blog" class="section-all bg-dark">
-        <!-- divider start -->
-        <div class="divider-xl"></div>
-        <!-- divider end -->
-        <!-- container start -->
-        <div class="container">
-            <!-- row start -->
-            <div class="row">
-                <!-- col start -->
-                <div class="col-lg-12">
-                    <!-- section subtitle start -->
-                    <div class="section-title section-title-dark">
-                        <h2 class="section-title-line section-title-line-dark">
-                            <span>Stay in the know</span>                            
-                        </h2>
-                    </div>
-                    <!-- section subtitle end -->
-                    <!-- divider start -->
-                    <div class="divider-m"></div>
-                    <!-- divider end -->
-                    <!-- section title start -->
-                    <h2 class="hero-heading hero-heading-dark">
-                        The <span>News</span>
-                    </h2>
-                    <!-- section title end -->
-                </div>
-                <!-- col end -->
-            </div>
-            <!-- row end -->
-            <!-- row start -->
-            <div class="row">
-                <!-- col start -->
-                <div class="col-lg-12">
-                    <!-- divider start -->
-                    <div class="divider-l"></div>
-                    <!-- divider end -->
-                    <!-- line start -->
-                    <div class="the-line"></div>
-                    <!-- line end -->
-                    <!-- divider start -->
-                    <div class="divider-l"></div>
-                    <!-- divider end -->
-                </div>
-                <!-- col end -->
-            </div>
-            <!-- row end -->
-        </div>
-        <!-- container end -->
-        <!-- container start -->
-        <div class="container-fluid nopadding">
-            <!-- carousel start -->
-            <div class="owl-carousel owl-carousel-news">
-                <!-- halve start -->
-                <div class="halves">
-                    <!-- halve IMG start -->
-                    <div class="half news-bg-all news-bg-1"></div>
-                    <!-- halve IMG end -->
-                    <!-- halve TXT start -->
-                    <div class="half half-color">
-                        <!-- row start -->
-                        <div class="row news-txt">
-                            <!-- col start -->
-                            <div class="col-md-12">
-                                <!-- divider start -->
-                                <div class="divider-l"></div>
-                                <!-- divider end -->
-                                <!-- section subtitle start -->
-                                <div class="blog-tag">May 1, 2022</div>
-                                <!-- section subtitle end -->
-                                <!-- divider start -->
-                                <div class="divider-m"></div>
-                                <!-- divider end -->
-                                <!-- section title start -->
-                                <h2>
-                                    Simplicity is complex                                    
-                                </h2>
-                                <!-- section title end -->
-                                <!-- divider start -->
-                                <div class="divider-l"></div>
-                                <!-- divider end -->
-                                <!-- section txt start -->
-                                <p>
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum has been the industry's standard dummy text ever since the 1500s.
-                                </p>
-                                <!-- section txt end -->
-                                <!-- divider start -->
-                                <div class="divider-l"></div>
-                                <!-- divider end -->
-                                <!-- button start -->
-                                <div class="more-wraper-center" data-toggle="modal" data-target="#newsModal-1">
-                                    <div class="more-button-bg-center more-button-bg-center-dark more-button-bg-center-dark-close more-button-circle"></div>
-                                    <div class="more-button-txt-center more-button-txt-center-close">
-                                        <span>Read More</span>
-                                    </div>
-                                </div>
-                                <!-- button end -->
-                                <!-- divider start -->
-                                <div class="divider-l"></div>
-                                <!-- divider end -->
-                            </div>
-                            <!-- col end -->
-                        </div>
-                        <!-- row end -->
-                    </div>
-                    <!-- halve TXT end -->
-                </div>
-                <!-- halve end -->
-                <!-- halve start -->
-                <div class="halves">
-                    <!-- halve TXT start -->
-                    <div class="half half-color">
-                        <!-- row start -->
-                        <div class="row news-txt">
-                            <!-- col start -->
-                            <div class="col-md-12">
-                                <!-- divider start -->
-                                <div class="divider-l"></div>
-                                <!-- divider end -->
-                                <!-- section subtitle start -->
-                                <div class="blog-tag">May 2, 2022</div>
-                                <!-- section subtitle end -->
-                                <!-- divider start -->
-                                <div class="divider-m"></div>
-                                <!-- divider end -->
-                                <!-- section title start -->
-                                <h2>
-                                    Design is a process                                    
-                                </h2>
-                                <!-- section title end -->
-                                <!-- divider start -->
-                                <div class="divider-l"></div>
-                                <!-- divider end -->
-                                <!-- section txt start -->
-                                <p>
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum has been the industry's standard dummy text ever since the 1500s.
-                                </p>
-                                <!-- section txt end -->
-                                <!-- divider start -->
-                                <div class="divider-l"></div>
-                                <!-- divider end -->
-                                <!-- button start -->
-                                <div class="more-wraper-center" data-toggle="modal" data-target="#newsModal-2">
-                                    <div class="more-button-bg-center more-button-bg-center-dark more-button-bg-center-dark-close more-button-circle"></div>
-                                    <div class="more-button-txt-center more-button-txt-center-close">
-                                        <span>Read More</span>
-                                    </div>
-                                </div>
-                                <!-- button end -->
-                                <!-- divider start -->
-                                <div class="divider-l"></div>
-                                <!-- divider end -->
-                            </div>
-                            <!-- col end -->
-                        </div>
-                        <!-- row end -->
-                    </div>
-                    <!-- halve TXT end -->
-                    <!-- halve IMG start -->
-                    <div class="half news-bg-all news-bg-2"></div>
-                    <!-- halve IMG end -->
-                </div>
-                <!-- halve end -->
-                <!-- halve start -->
-                <div class="halves">
-                    <!-- halve IMG start -->
-                    <div class="half news-bg-all news-bg-3"></div>
-                    <!-- halve IMG end -->
-                    <!-- halve TXT start -->
-                    <div class="half half-color">
-                        <!-- row start -->
-                        <div class="row news-txt">
-                            <!-- col start -->
-                            <div class="col-md-12">
-                                <!-- divider start -->
-                                <div class="divider-l"></div>
-                                <!-- divider end -->
-                                <!-- section subtitle start -->
-                                <div class="blog-tag">May 3, 2022</div>
-                                <!-- section subtitle end -->
-                                <!-- divider start -->
-                                <div class="divider-m"></div>
-                                <!-- divider end -->
-                                <!-- section title start -->
-                                <h2>
-                                    Aesthetic is a decision                                    
-                                </h2>
-                                <!-- section title end -->
-                                <!-- divider start -->
-                                <div class="divider-l"></div>
-                                <!-- divider end -->
-                                <!-- section txt start -->
-                                <p>
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum has been the industry's standard dummy text ever since the 1500s.
-                                </p>
-                                <!-- section txt end -->
-                                <!-- divider start -->
-                                <div class="divider-l"></div>
-                                <!-- divider end -->
-                                <!-- button start -->
-                                <div class="more-wraper-center" data-toggle="modal" data-target="#newsModal-3">
-                                    <div class="more-button-bg-center more-button-bg-center-dark more-button-bg-center-dark-close more-button-circle"></div>
-                                    <div class="more-button-txt-center more-button-txt-center-close">
-                                        <span>Read More</span>
-                                    </div>
-                                </div>
-                                <!-- button end -->
-                                <!-- divider start -->
-                                <div class="divider-l"></div>
-                                <!-- divider end -->
-                            </div>
-                            <!-- col end -->
-                        </div>
-                        <!-- row end -->
-                    </div>
-                    <!-- halve TXT end -->
-                </div>
-                <!-- halve end -->
-                <!-- halve start -->
-                <div class="halves">
-                    <!-- halve TXT start -->
-                    <div class="half half-color">
-                        <!-- row start -->
-                        <div class="row news-txt">
-                            <!-- col start -->
-                            <div class="col-md-12">
-                                <!-- divider start -->
-                                <div class="divider-l"></div>
-                                <!-- divider end -->
-                                <!-- section subtitle start -->
-                                <div class="blog-tag">May 4, 2022</div>
-                                <!-- section subtitle end -->
-                                <!-- divider start -->
-                                <div class="divider-m"></div>
-                                <!-- divider end -->
-                                <!-- section title start -->
-                                <h2>
-                                    Style is everything                                    
-                                </h2>
-                                <!-- section title end -->
-                                <!-- divider start -->
-                                <div class="divider-l"></div>
-                                <!-- divider end -->
-                                <!-- section txt start -->
-                                <p>
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum has been the industry's standard dummy text ever since the 1500s.
-                                </p>
-                                <!-- section txt end -->
-                                <!-- divider start -->
-                                <div class="divider-l"></div>
-                                <!-- divider end -->
-                                <!-- button start -->
-                                <div class="more-wraper-center" data-toggle="modal" data-target="#newsModal-4">
-                                    <div class="more-button-bg-center more-button-bg-center-dark more-button-bg-center-dark-close more-button-circle"></div>
-                                    <div class="more-button-txt-center more-button-txt-center-close">
-                                        <span>Read More</span>
-                                    </div>
-                                </div>
-                                <!-- button end -->
-                                <!-- divider start -->
-                                <div class="divider-l"></div>
-                                <!-- divider end -->
-                            </div>
-                            <!-- col end -->
-                        </div>
-                        <!-- row end -->
-                    </div>
-                    <!-- halve TXT end -->
-                    <!-- halve IMG start -->
-                    <div class="half news-bg-all news-bg-4"></div>
-                    <!-- halve IMG end -->
-                </div>
-                <!-- halve end -->
-            </div>
-            <!-- carousel end -->
-            <!-- divider start -->
-            <div class="divider-l"></div>
-            <!-- divider end -->
-            <!-- owl nav start -->
-            <div class="owl-nav owl-nav-custom-news"></div>
-            <!-- owl nav end -->
-            <!-- row start -->
-            <div class="row">
-                <!-- col start -->
-                <div class="col-lg-12">
-                    <!-- divider start -->
-                    <div class="divider-xl"></div>
-                    <!-- divider end -->
-                    <!-- line start -->
-                    <div class="the-line"></div>
-                    <!-- line end -->
-                    <!-- divider start -->
-                    <div class="divider-l"></div>
-                    <!-- divider end -->
-                </div>
-                <!-- col end -->
-            </div>
-            <!-- row end -->
-            <!-- button start -->
-            <div class="more-wraper-center">
-                <a href="blog.html">
-                    <div class="more-button-bg-center more-button-bg-center-dark more-button-bg-center-dark-close more-button-circle">
-                    </div>
-                    <div class="more-button-txt-center more-button-txt-center-close">
-                        <span>All entries</span>
-                    </div>
-                </a>
-            </div>
-            <!-- button end -->
-            <!-- row start -->
-            <div class="row">
-                <!-- col start -->
-                <div class="col-lg-12">
-                    <!-- divider start -->
-                    <div class="divider-l"></div>
-                    <!-- divider end -->
-                    <!-- line start -->
-                    <div class="the-line"></div>
-                    <!-- line end -->
-                    <!-- divider start -->
-                    <div class="divider-xl"></div>
-                    <!-- divider end -->
-                </div>
-                <!-- col end -->
-            </div>
-            <!-- row end -->
-        </div>
-        <!-- container end -->
-    </div>
-    <!-- blog end -->
 
     <!-- contact start -->
     <div id="contact" class="section-all">
