desktop view changed 2

--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
                                         <!-- swiper slider item txt start -->
                                         <div class="swiper-slide-inner-txt">
                                             <!-- section subtitle start -->
-                                            <div class="section-title section-title-home fadeIn-element">
+                                            <div class="section-title section-title-home fadeIn-element visible-xs">
                                                 <h2 class="section-title-line section-title-line-home">
-                                                    <!-- <span>Special &nbsp;Occasion</span> -->
+                                                    <span>Special &nbsp;Occasion</span>
                                                 </h2>
                                             </div>
                                             <!-- section subtitle end -->
