mobile view changed

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                         <!-- swiper slider item txt start -->
                                         <div class="swiper-slide-inner-txt">
                                             <!-- section subtitle start -->
-                                            <div class="section-title section-title-home fadeIn-element visible-xs">
+                                            <div class="section-title section-title-home fadeIn-element visible-xs" style="margin-top: 100px;">
                                                 <h2 class="section-title-line section-title-line-home">
                                                     <span>Special &nbsp;Occasion</span>
                                                 </h2>
