special-occasions removed

--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
                                         <!-- swiper slider item txt start -->
                                         <div class="swiper-slide-inner-txt">
                                             <!-- section subtitle start -->
-                                            <div class="section-title section-title-home fadeIn-element visible-xs" style="margin-top: 100px;">
+                                            <!-- <div class="section-title section-title-home fadeIn-element visible-xs" style="margin-top: 100px;">
                                                 <h2 class="section-title-line section-title-line-home">
                                                     <span>Special &nbsp;Occasion</span>
                                                 </h2>
-                                            </div>
+                                            </div> -->
                                             <!-- section subtitle end -->
                                             <!-- divider start -->
                                             <div class="divider-m"></div>
@@ -153,7 +153,7 @@
                                             <div class="more-wraper-center more-wraper-center-home fadeIn-element">
                                                 <a data-lity="" href="mothersday.mp4">
                                                     <div class="more-button-bg-center more-button-circle visible-xs" style="
-                                                    margin-top: 360px" ></div>
+                                                    margin-top: 420px" ></div>
                                                     <div class="more-button-bg-center more-button-circle hidden-xs" style="
                                                     margin-top: -130px"></div>
                                                     <div class="more-button-txt-center">
