--- a/index.html
+++ b/index.html
@@ -1307,7 +1307,9 @@
                     <!-- halve start -->
                     <div class="halves">
                         <!-- halve IMG start -->
-                        <div class="half news-bg-all news-bg-1"></div>
+                        <div class="half news-bg-all news-bg-1">
+                            <img src="img/news/toronto-restaurants-aamara-indian-st-clair-west-bengaluru-scaled-960x0-c-default.jpg">
+                        </div>
                         <!-- halve IMG end -->
                         <!-- halve TXT start -->
                         <div class="half half-color">
@@ -1412,14 +1414,18 @@
                         </div>
                         <!-- halve TXT end -->
                         <!-- halve IMG start -->
-                        <div class="half news-bg-all news-bg-2"></div>
+                        <div class="half news-bg-all news-bg-2">
+                            <img src="img/news/toronto-restaurants-aamara-indian-st-clair-west-hyderabad-scaled-960x0-c-default.jpg" >
+                        </div>
                         <!-- halve IMG end -->
                     </div>
                     <!-- halve end -->
                     <!-- halve start -->
                     <div class="halves">
                         <!-- halve IMG start -->
-                        <div class="half news-bg-all news-bg-3"></div>
+                        <div class="half news-bg-all news-bg-3">
+                            <img src="img/news/toronto-restaurants-aamara-indian-st-clair-west-jaipur-scaled-960x0-c-default.jpg" >
+                        </div>
                         <!-- halve IMG end -->
                         <!-- halve TXT start -->
                         <div class="half half-color">
@@ -1524,7 +1530,9 @@
                         </div>
                         <!-- halve TXT end -->
                         <!-- halve IMG start -->
-                        <div class="half news-bg-all news-bg-4"></div>
+                        <div class="half news-bg-all news-bg-4">
+                            <img src="img/news/toronto-restaurants-aamara-indian-st-clair-west-kolkata-scaled-960x0-c-default.jpg">
+                        </div>
                         <!-- halve IMG end -->
                     </div>
                     <!-- halve end -->
