--- a/index.html
+++ b/index.html
@@ -1328,7 +1328,7 @@
                                     <!-- divider end -->
                                     <!-- section title start -->
                                     <h2>
-                                        Simplicity is complex                                    
+                                        A Tequila Tango with Mango and Turmeric                                    
                                     </h2>
                                     <!-- section title end -->
                                     <!-- divider start -->
@@ -1336,8 +1336,7 @@
                                     <!-- divider end -->
                                     <!-- section txt start -->
                                     <p>
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                        Ipsum has been the industry's standard dummy text ever since the 1500s.
+                                        This vibrant creation aims to capture the electric energy of Bengaluru, the capital of India’s Karnataka state. The tequila-based drink features mango purée, lime juice, turmeric and a spicy Tajín rim. (A non-alcoholic version is also available.) $20.
                                     </p>
                                     <!-- section txt end -->
                                     <!-- divider start -->
@@ -1347,7 +1346,7 @@
                                     <div class="more-wraper-center" data-toggle="modal" data-target="#newsModal-1">
                                         <div class="more-button-bg-center more-button-bg-center-dark more-button-bg-center-dark-close more-button-circle"></div>
                                         <div class="more-button-txt-center more-button-txt-center-close">
-                                            <span>Read More</span>
+                                            <a href="https://torontolife.com/food/whats-on-the-menu-at-aamara-indian-st-clair-west/"><span>Read More</span></a>
                                         </div>
                                     </div>
                                     <!-- button end -->
@@ -1381,7 +1380,7 @@
                                     <!-- divider end -->
                                     <!-- section title start -->
                                     <h2>
-                                        Design is a process                                    
+                                        Gin Fusion with Saffron Honey and Elderflower                                    
                                     </h2>
                                     <!-- section title end -->
                                     <!-- divider start -->
@@ -1389,8 +1388,7 @@
                                     <!-- divider end -->
                                     <!-- section txt start -->
                                     <p>
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                        Ipsum has been the industry's standard dummy text ever since the 1500s.
+                                        Hyderabad is the muse for this purple-pigmented tipple. Gin is combined with orange and elderflower liqueurs as well as saffron-infused honey, lemon juice and egg white. $21.
                                     </p>
                                     <!-- section txt end -->
                                     <!-- divider start -->
@@ -1400,7 +1398,7 @@
                                     <div class="more-wraper-center" data-toggle="modal" data-target="#newsModal-2">
                                         <div class="more-button-bg-center more-button-bg-center-dark more-button-bg-center-dark-close more-button-circle"></div>
                                         <div class="more-button-txt-center more-button-txt-center-close">
-                                            <span>Read More</span>
+                                            <a href="https://torontolife.com/food/whats-on-the-menu-at-aamara-indian-st-clair-west/"><span>Read More</span></a>
                                         </div>
                                     </div>
                                     <!-- button end -->
@@ -1444,7 +1442,7 @@
                                     <!-- divider end -->
                                     <!-- section title start -->
                                     <h2>
-                                        Aesthetic is a decision                                    
+                                        Spiced Rum Symphony with Rose and Cardamom                                   
                                     </h2>
                                     <!-- section title end -->
                                     <!-- divider start -->
@@ -1452,8 +1450,7 @@
                                     <!-- divider end -->
                                     <!-- section txt start -->
                                     <p>
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                        Ipsum has been the industry's standard dummy text ever since the 1500s.
+                                        The pink hue of this cocktail is a reference to Jaipur, which is nicknamed the Pink City for its blush-coloured buildings. For it, spiced rum is mixed with Amarula, Kashmiri tea, rose syrup and cardamom bitters. $21.
                                     </p>
                                     <!-- section txt end -->
                                     <!-- divider start -->
@@ -1463,7 +1460,7 @@
                                     <div class="more-wraper-center" data-toggle="modal" data-target="#newsModal-3">
                                         <div class="more-button-bg-center more-button-bg-center-dark more-button-bg-center-dark-close more-button-circle"></div>
                                         <div class="more-button-txt-center more-button-txt-center-close">
-                                            <span>Read More</span>
+                                            <a href="https://torontolife.com/food/whats-on-the-menu-at-aamara-indian-st-clair-west/"><span>Read More</span></a>
                                         </div>
                                     </div>
                                     <!-- button end -->
@@ -1497,7 +1494,7 @@
                                     <!-- divider end -->
                                     <!-- section title start -->
                                     <h2>
-                                        Style is everything                                    
+                                        A Smoky Bourbon Cocktail Adventure                                    
                                     </h2>
                                     <!-- section title end -->
                                     <!-- divider start -->
@@ -1505,8 +1502,7 @@
                                     <!-- divider end -->
                                     <!-- section txt start -->
                                     <p>
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                        Ipsum has been the industry's standard dummy text ever since the 1500s.
+                                        With warming flavours of bourbon, chai-tea infused vermouth, cinnamon syrup and citrus indica bitters—was inspired by the spice markets of Kolkata. $25.
                                     </p>
                                     <!-- section txt end -->
                                     <!-- divider start -->
@@ -1516,7 +1512,7 @@
                                     <div class="more-wraper-center" data-toggle="modal" data-target="#newsModal-4">
                                         <div class="more-button-bg-center more-button-bg-center-dark more-button-bg-center-dark-close more-button-circle"></div>
                                         <div class="more-button-txt-center more-button-txt-center-close">
-                                            <span>Read More</span>
+                                            <a href="https://torontolife.com/food/whats-on-the-menu-at-aamara-indian-st-clair-west/"><span>Read More</span></a>
                                         </div>
                                     </div>
                                     <!-- button end -->
