dates and all entries button removed

--- a/index.html
+++ b/index.html
@@ -1308,7 +1308,7 @@
                     <div class="halves">
                         <!-- halve IMG start -->
                         <div class="half news-bg-all news-bg-1">
-                            <img src="img/news/toronto-restaurants-aamara-indian-st-clair-west-bengaluru-scaled-960x0-c-default.jpg">
+                            <img src="img/news/toronto-restaurants-aamara-indian-st-clair-west-bengaluru-scaled-960x0-c-default.jpg" >
                         </div>
                         <!-- halve IMG end -->
                         <!-- halve TXT start -->
@@ -1321,7 +1321,7 @@
                                     <div class="divider-l"></div>
                                     <!-- divider end -->
                                     <!-- section subtitle start -->
-                                    <div class="blog-tag">May 1, 2022</div>
+                                    <!-- <div class="blog-tag">May 1, 2022</div> -->
                                     <!-- section subtitle end -->
                                     <!-- divider start -->
                                     <div class="divider-m"></div>
@@ -1373,7 +1373,7 @@
                                     <div class="divider-l"></div>
                                     <!-- divider end -->
                                     <!-- section subtitle start -->
-                                    <div class="blog-tag">May 2, 2022</div>
+                                    <!-- <div class="blog-tag">May 2, 2022</div> -->
                                     <!-- section subtitle end -->
                                     <!-- divider start -->
                                     <div class="divider-m"></div>
@@ -1435,7 +1435,7 @@
                                     <div class="divider-l"></div>
                                     <!-- divider end -->
                                     <!-- section subtitle start -->
-                                    <div class="blog-tag">May 3, 2022</div>
+                                    <!-- <div class="blog-tag">May 3, 2022</div> -->
                                     <!-- section subtitle end -->
                                     <!-- divider start -->
                                     <div class="divider-m"></div>
@@ -1487,7 +1487,7 @@
                                     <div class="divider-l"></div>
                                     <!-- divider end -->
                                     <!-- section subtitle start -->
-                                    <div class="blog-tag">May 4, 2022</div>
+                                    <!-- <div class="blog-tag">May 4, 2022</div> -->
                                     <!-- section subtitle end -->
                                     <!-- divider start -->
                                     <div class="divider-m"></div>
@@ -1527,7 +1527,7 @@
                         <!-- halve TXT end -->
                         <!-- halve IMG start -->
                         <div class="half news-bg-all news-bg-4">
-                            <img src="img/news/toronto-restaurants-aamara-indian-st-clair-west-kolkata-scaled-960x0-c-default.jpg">
+                            <img src="img/news/toronto-restaurants-aamara-indian-st-clair-west-kolkata-scaled-960x0-c-default.jpg" >
                         </div>
                         <!-- halve IMG end -->
                     </div>
@@ -1558,7 +1558,7 @@
                 </div>
                 <!-- row end -->
                 <!-- button start -->
-                <div class="more-wraper-center">
+                <!-- <div class="more-wraper-center">
                     <a href="blog.html">
                         <div class="more-button-bg-center more-button-bg-center-dark more-button-bg-center-dark-close more-button-circle">
                         </div>
@@ -1566,7 +1566,7 @@
                             <span>All entries</span>
                         </div>
                     </a>
-                </div>
+                </div> -->
                 <!-- button end -->
                 <!-- row start -->
                 <div class="row">
