--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                 <a href="#services">Services</a>
                             </li>
                             <li>
-                                <a href="#blog">Reviews</a>
+                                <a href="#blog">Testimonials</a>
                             </li>
                             <li>
                                 <a href="#contact">Contact</a>
@@ -1276,9 +1276,14 @@
                         <div class="divider-m"></div>
                         <!-- divider end -->
                         <!-- section title start -->
-                        <h2 class="hero-heading hero-heading-dark" style="margin-bottom:120px">
-                            <span>Reviews</span>
+                        <h2 class="hero-heading hero-heading-dark" style=" position:relative; top: -70px;">
+                            <span>Testimonials</span>
                         </h2>
+                        <blockquote class="quote-inner" style="padding:30px;
+                                font-family: 'Playfair Display', serif;
+                                                    font-size: 22px;
+                                                    font-style: normal;
+                                                    line-height: 1.75; position: relative; top: -50px;">Indulge in the flavors of our restaurant as seen through the discerning eyes of Toronto Life. Explore their expert reviews, savoring the delectable insights and culinary critiques that showcase our finest dishes. </blockquote>
                         <!-- section title end -->
                     </div>
                     <!-- col end -->
@@ -1329,11 +1334,7 @@
                                     <!-- divider end -->
                                     <!-- section txt start -->
                                     <p>
-                                        This tequila-based elixir, fused with mango puree, lime juice and a turmeric twist, encapsulates the
-                                                vibrant spirit of the Garden City.
-                                                Tajin-seasoned rim, a homage to its
-                                                diverse cultural zest, completes this
-                                                kaleidoscopic libation. 
+                                        This vibrant creation aims to capture the electric energy of Bengaluru, the capital of India’s Karnataka state. The tequila-based drink features mango purée, lime juice, turmeric and a spicy Tajín rim.
                                     </p>
                                     <!-- section txt end -->
                                     <!-- divider start -->
@@ -1385,13 +1386,7 @@
                                     <!-- divider end -->
                                     <!-- section txt start -->
                                     <p>
-                                        Inspired by the regal history and
-                                        rich culinary traditions of Hyderabad,
-                                        this cocktail combines the luxurious
-                                        essence of saffron-infused honey with
-                                        the citrus brightness of orange liqueur
-                                        and the velvety texture of egg white,
-                                        creating a drink fit for royalty
+                                        Hyderabad is the muse for this purple-pigmented tipple. Gin is combined with orange and elderflower liqueurs as well as saffron-infused honey, lemon juice and egg white
                                     </p>
                                     <!-- section txt end -->
                                     <!-- divider start -->
@@ -1453,12 +1448,7 @@
                                     <!-- divider end -->
                                     <!-- section txt start -->
                                     <p>
-                                         Just like the colorful gems and
-                                            rich history of Jaipur, this cocktail
-                                            shines with the floral notes of rose
-                                            syrup and the exotic spice of
-                                            cardamom, creating a regal and
-                                            vibrant drink.
+                                        The pink hue of this cocktail is a reference to Jaipur, which is nicknamed the Pink City for its blush-coloured buildings. For it, spiced rum is mixed with Amarula, Kashmiri tea, rose syrup and cardamom bitters
                                     </p>
                                     <!-- section txt end -->
                                     <!-- divider start -->
@@ -1510,12 +1500,7 @@
                                     <!-- divider end -->
                                     <!-- section txt start -->
                                     <p>
-                                        Drawing inspiration from the
-                                        bustling spice markets of Kolkata, this
-                                        cocktail blends the warmth of chai tea
-                                        and cinnamon with the rich depth of
-                                        bourbon, creating a sensory journey
-                                        through the flavors of the city.
+                                        This smoky cocktail—with warming flavours of bourbon, chai-tea infused vermouth, cinnamon syrup and citrus indica bitters—was inspired by the spice markets of Kolkata.
                                     </p>
                                     <!-- section txt end -->
                                     <!-- divider start -->
