--- a/index.html
+++ b/index.html
@@ -1168,6 +1168,7 @@
                                     <blockquote class="quote-inner" style="font-size: 20px;text-align: center;">
                                         Delight in Exceptional Cuisine, Delivered with Elegance: Where Great Food Meets Seamless Delivery and Valet Comfort.
                                     </blockquote>
+                                    
                                 </div>
                             </div>
                         </div>
@@ -1281,9 +1282,16 @@
                         </h2>
                         <blockquote class="quote-inner" style="padding:30px;
                                 font-family: 'Playfair Display', serif;
-                                                    font-size: 22px;
+                                                    font-size: 20px;
                                                     font-style: normal;
-                                                    line-height: 1.75; position: relative; top: -50px;">Indulge in the flavors of our restaurant as seen through the discerning eyes of Toronto Life. Explore their expert reviews, savoring the delectable insights and culinary critiques that showcase our finest dishes. </blockquote>
+                                                    line-height: 1.75; position: relative; top: -50px;">Indulge in the flavors of our restaurant as seen through the discerning eyes of Toronto Life. Explore their expert 
+                                                    reviews, savoring the delectable insights and culinary critiques that showcase our finest dishes. 
+                        </blockquote>
+                        <h3 class="item-name"><a href="https://torontolife.com/food/whats-on-the-menu-at-aamara-indian-st-clair-west/" target="_blank" style="cursor:pointer;
+                            color:white;
+                            position:relative; top: -60px;
+                            text-decoration:underline;">Read more</a>
+                        </h3>
                         <!-- section title end -->
                     </div>
                     <!-- col end -->
